# novelscript

./: Cargo.toml  README.md  test.ns  test2.ns  test2_night.ns
src/: bin.rs  lib.rs  novelscript.pest  parser.rs
tests/: parse_test.rs  serde_test.rs
