[package]
name = "novelscript"
version = "0.1.0"
authors = ["Nobbele <realnobbele@gmail.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0.22"
serde = { version = "1.0.117", optional = true, features = ["derive"] }
serde_json = { version = "1.0.59", optional = true }

[lib]
name = "novelscript"
path = "src/lib.rs"

[[bin]]
name = "novelscript-bin"
path = "src/bin.rs"
